fix overflow message on mobile

--- a/src/pages/chat/Chat.module.css
+++ b/src/pages/chat/Chat.module.css
@@ -75,7 +75,6 @@
     margin-bottom: 20px;
     max-width: 80%;
     display: flex;
-    min-width: 500px;
 }
 
 .chatMessageGptMinWidth {
